@@ -56,11 +56,13 @@ jaspar <- read_jaspar(system.file("extdata", "jaspar.txt",
 jaspar.ic10 <- filter_motifs(jaspar, icscore = 10)
 
 ## By organism:
+\dontrun{
 if (requireNamespace("MotifDb", quietly = TRUE) && .Platform$OS.type == "unix") {
   library(MotifDb)
   motifs <- convert_motifs(MotifDb)
   motifs <- filter_motifs(motifs, organism = c("Athaliana", "Mmusculus"),
                           extrainfo = c("dataSource" = "cisbp_1.02"))
+}
 }
 
 }
